# ml-fullstack-starter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Deploy.md  Makefile  README.md  docker-compose.yml
backend/: CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: predict.py
backend/app/core/: logging.py
backend/app/logs/: app.log.2026-03-22
backend/app/schemas/: predict.py
backend/logs/: app.log.2026-04-15
backend/models/: diabetes_model.pkl  scaled_logistic_regression_model.joblib
backend/notebooks/: diabetes.ipynb
backend/scripts/: train_model.py
backend/tests/: test_predict.py
backend/training/: trainer.py
backend/utils/: path.py
frontend/: Dockerfile  README.md  next.config.ts  nginx.conf
frontend/src/app/: globals.css  layout.tsx  page.tsx
